--- a/web/frontend/tsconfig.json
+++ b/web/frontend/tsconfig.json
@@ -11,7 +11,11 @@
     "moduleDetection": "force",
     "noEmit": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "$lib/*": ["src/lib/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.svelte", "vite.config.ts"]
 }
